@@ -18,6 +18,7 @@ Version 2.2
 - Fixed a bug that caused internal errors if names where used as iteration
   variable and regular variable *after* the loop if that variable was unused
   *before* the loop.  (#331)
+- Added support for optional `scoped` modifier to blocks.
 
 Version 2.1.1
 -------------
